<resources>
    <string name="app_name">BookUp!</string>
    <string name="welcomeMessage">Welcome to BookUp!</string>
    <string name="title_home">Home</string>
    <string name="Settings">Settings</string>
    <string name="Search">Search</string>
    <string name="SearchForBook">Search for a book</string>
    <string name="MyBooks">My Books</string>
    <string name="Popular">Popular</string>
    <string name="Title">Title</string>
    <string name="YearPublished">Published date:</string>
    <string name="PageCount">Page Count:</string>
    <string name="Description">Description</string>
    <string name="back">Back</string>
    <string name="title_activity_specific_book" translatable="false">SpecificBookActivity</string>
    <string name="SignIn" translatable="false">Sign in</string>
    <string name="sign_in_with_google" translatable="false">Sign-In with Google</string>
    <string name="sign_in_with_mail" translatable="false">Sign-In with Mail</string>
    <string name="sign_out">Sign Out</string>
    <string name="no_date">No publish date </string>
    <string name="no_authors">No authors</string>
    <string name="no_books_found">No books found</string>
    <string name="Favourites">Favourites</string>
    <string name="ReadLater">Read later</string>
    <string name="Unknown">Unknown</string>
    <string name="ListName" translatable="false">List name</string>
    <string name="NoBooksMessage">You have no books in your library. Add some!</string>
    <string name="AddToReadLater">Add to Read later</string>
    <string name="Email" translatable="false">Email</string>
    <string name="ChooseLanguage">Choose language</string>
    <string name="Language">Language:</string>
    <string name="Yupee">Enjoy the BookUp! app</string>
    <string name="Authors">Authors:</string>
    <string name="remove">Remove from my list</string>
</resources>